cfn_benchmark/cfn_templates_greenfield/aws-samples__amazon-q-detectors/cloudformation/src/detectors/cloudformation-fsx-resources-protected/cloudformation-fsx-resources-protected_compliant.yaml
# Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
# SPDX-License-Identifier: MIT-0

# {fact rule=cloudformation-fsx-resources-protected@v1.0 defects=0}
Resources:
  FileSystemVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: FileSystemVPC

  FileSystemSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref FileSystemVPC
      CidrBlock: 10.0.0.0/24
      AvailabilityZone: !Select [0, !GetAZs '']
      Tags:
        - Key: Name
          Value: FileSystemSubnet

  LustreIngressSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Security group for FSx for Lustre ingress"
      VpcId: !Ref FileSystemVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 988
          ToPort: 988
          CidrIp: 10.0.0.0/16
        - IpProtocol: tcp
          FromPort: 1021
          ToPort: 1023
          CidrIp: 10.0.0.0/16
      Tags:
        - Key: Name
          Value: LustreIngressSecurityGroup

  FileSystem:
    Type: AWS::FSx::FileSystem
    Properties:
      FileSystemType: "LUSTRE"
      FileSystemTypeVersion: "2.12"
      StorageCapacity: 1200
      SubnetIds: [!Ref FileSystemSubnet]
      SecurityGroupIds: [!Ref LustreIngressSecurityGroup]
      # Compliant: FSx File Systems resources have LustreConfiguration set with `AutomatedBackupRetentionDays`.
      LustreConfiguration:
        DeploymentType: PERSISTENT_1
        AutomaticBackupRetentionDays: 30
# {/fact}
